Sat Apr 10 11:03 PM - (Tweaking menus, importing code for sign up form on landing page, playing with most popular widget in primary sidebar, removing home.php and replacing with front-page.php)

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,38 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 /.htaccess
-/license.txt
-/readme.html
 /sitemap.xml
-/sitemap.xml.gz
+/_config.yml
+sitemap.xml.gz
+*.log
+sitemap.xml
+sitemap.xml.gz
+wp-config.php
+wp-content/advanced-cache.php
+wp-content/backup-db/
+wp-content/backups/
+wp-content/blogs.dir/
+wp-content/cache/
+wp-content/upgrade/
+wp-content/uploads/
+wp-content/wp-cache-config.php
+wp-content/plugins/hello.php
+wp-content/db.php
+wp-admin/
+wp-includes/
+mwp_db/
+/wp-*.php
+/index.php
+/xmlrpc.php
+/license.txt
+.idea
+node_modules
+bower_components
+.sass-cache
+.DS_Store
+Thumbs.db
+/.settings/
+.dropbox
+.dropbox_cache
+.BridgeLabelsAndRatings
+apple-touch-*
